--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <base target="self">
     <style>
         iframe {
-            min-height: 90vh;
-            min-width: 90vw;
+            min-height: 100%;
+            min-width: 100%;
         }
     </style>
 </head>
