--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <base target="self">
     <style>
         iframe {
-            min-height: 100%;
+            min-height: 100vmax;
             min-width: 100%;
         }
     </style>
