--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
 
     <base target="self">
     <style>
+        body {
+            display: flex;
+            margin: 0px;
+        }
+        
         iframe {
-            min-height: 100vmax;
-            min-width: 100%;
+            min-height: 49vmax;
+            min-width: 99.9%;
+            margin: 0px;
+            border-style: none;
+            border: 1px solid #0000FF;
         }
     </style>
 </head>
 
 <body>
-
-    <h2>HTML Iframes</h2>
-    <p>You can use the height and width attributes to specify the size of the iframe:</p>
-
     <iframe src="https://script.google.com/macros/s/AKfycbwP5gj2tYsTZHdffM-xeSxJHIZ_JzI3wPdxHiCUaF5k0HnTmrwYJUfHokLwElo4BpNj/exec" title="Iframe Example"></iframe>
-
 </body>
 
 </html>
