--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbwP5gj2tYsTZHdffM-xeSxJHIZ_JzI3wPdxHiCUaF5k0HnTmrwYJUfHokLwElo4BpNj/exec" title="Iframe Example"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbwP5gj2tYsTZHdffM-xeSxJHIZ_JzI3wPdxHiCUaF5k0HnTmrwYJUfHokLwElo4BpNj/exec" title="SGTTC" height="49vmax" width="99.9%"></iframe>
 </body>
 
 </html>
