--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0px;
         }
         
-        iframe {
+        .ifrInicial {
             min-height: 49vmax;
             min-width: 99.9%;
             margin: 0px;
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbw6mlVWmoQoUQGgh4ePGOvykkRu9N-AyuQe5iUJ/exec" title="SGTTC" height="49vmax" width="99.9%"></iframe>
+    <iframe class="ifrInicial" src="https://script.google.com/macros/s/AKfycbw6mlVWmoQoUQGgh4ePGOvykkRu9N-AyuQe5iUJ/exec" title="SGTTC" height="49vmax" width="99.9%"></iframe>
 </body>
 
 </html>
