--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             min-width: 99.9%;
             width: 100%,
             border-style: none;
-            border: 1px solid #0000FF;
+            /* border: 1px solid #0000FF; */
         }
         
         @media (orientation: landscape),
@@ -32,7 +32,7 @@
                 min-height: 99.99vmin;
                 min-width: 99.9%;
                 border-style: none;
-                border: 1px solid #0000FF;
+                /* border: 1px solid #0000FF; */
             }
         }
         
