--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 min-height: 99.99vmax;
                 min-width: 99.99%;
                 border-style: none;
-                border: 1px solid #0000FF;
+                /* border: 1px solid #0000FF; */
             }
         }
         
