--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             margin:0;
             padding:0;
             height:100%;
+            width:100vw;
         }
         .ifrInicial {
             display: block;
