--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         }
         .ifrInicial {
             display: block;
-            min-height: 99.99vmax;
-            min-width: 99.9%;
-            width: 100%,
+            min-height: 100vmax;
+            min-width: 100vw;
+            width: 100vw,
             border-style: none;
             /* border: 1px solid #0000FF; */
         }
@@ -30,8 +30,8 @@
         (min-width: 800px) {
             .ifrInicial {
                 display: block;
-                min-height: 99.99vmin;
-                min-width: 99.9%;
+                min-height: 100vmin;
+                min-width: 100vmax;
                 border-style: none;
                 /* border: 1px solid #0000FF; */
             }
@@ -40,8 +40,8 @@
         @media (orientation: portrait) {
             .ifrInicial {
                 display: block;
-                min-height: 99.99vmax;
-                min-width: 99.99%;
+                min-height: 100vmax;
+                min-width: 100vmin;
                 border-style: none;
                 /* border: 1px solid #0000FF; */
             }
