--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             display: flex;
         }
-        html, body, div, iframe, .ifrInicial { 
+        html, body, div, iframe { 
             margin:0;
             padding:0;
             height:100%;
@@ -19,8 +19,11 @@
         }
         .ifrInicial {
             display: block;
+            margin:0;
+            padding:0;
             min-height: 100vmax;
             min-width: 99.9vw;
+            max-width: 99.9vw;
             width: 99.9vw,
             border-style: none;
             /* border: 1px solid #0000FF; */
@@ -32,6 +35,7 @@
                 display: block;
                 min-height: 100vmin;
                 min-width: 99.9vmax;
+                max-width: 99.9vmax;
                 border-style: none;
                 /* border: 1px solid #0000FF; */
             }
