--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         body {
             display: flex;
         }
-        html, body, div, iframe { 
+        html, body, div { 
             margin:0;
             padding:0;
             height:100%;
-            width:100vw;
+            width:99.9vw;
         }
         .ifrInicial {
             display: block;
