--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             margin:0;
             padding:0;
             height:100%;
-            width:99.9vw;
+            width:100vw;
         }
         .ifrInicial {
             display: block;
             margin:0;
             padding:0;
             min-height: 100vmax;
-            min-width: 99.9vw;
-            max-width: 99.9vw;
-            width: 99.9vw,
+            /* min-width: 99.9vw;
+            max-width: 99.9vw; */
+            width: 100vw,
             border-style: none;
             /* border: 1px solid #0000FF; */
         }
@@ -34,8 +34,8 @@
             .ifrInicial {
                 display: block;
                 min-height: 100vmin;
-                min-width: 99.9vmax;
-                max-width: 99.9vmax;
+                /*min-width: 99.9vmax;
+                max-width: 99.9vmax;*/
                 border-style: none;
                 /* border: 1px solid #0000FF; */
             }
@@ -45,7 +45,7 @@
             .ifrInicial {
                 display: block;
                 min-height: 100vmax;
-                min-width: 99.9vmin;
+                /* min-width: 99.9vmin; */
                 border-style: none;
                 /* border: 1px solid #0000FF; */
             }
