--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body> <!-- https://script.google.com/macros/s/AKfycbw6mlVWmoQoUQGgh4ePGOvykkRu9N-AyuQe5iUJ/exec -->
-    <iframe class="ifrInicial" src="https://script.google.com/macros/s/AKfycbw6mlVWmoQoUQGgh4ePGOvykkRu9N-AyuQe5iUJ/exec" title="SGTTC" height="49vmax" width="99%" allowfullscreen="true"></iframe>
+    <iframe class="ifrInicial" src="https://script.google.com/macros/s/AKfycbw6mlVWmoQoUQGgh4ePGOvykkRu9N-AyuQe5iUJ/exec" title="SGTT" height="49vmax" width="99%" allowfullscreen="true"></iframe>
 </body> <!-- "https://script.google.com/macros/s/AKfycbwP5gj2tYsTZHdffM-xeSxJHIZ_JzI3wPdxHiCUaF5k0HnTmrwYJUfHokLwElo4BpNj/exec" -->
 
 </html>
