--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>SGTT - Sistema de Gestión del Territorio Telefónico</title>
+    <link rel="shortcut icon" href="Recurso3.svg">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
